[gd_scene load_steps=4 format=3 uid="uid://ygcmgg1g6sk2"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_pn184"]
[ext_resource type="Texture2D" uid="uid://duc3a8ofphvej" path="res://resources/graphics/player/player.png" id="1_ymi5c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvm78"]
radius = 68.0074

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_pn184")

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_ymi5c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-33, 6)
shape = SubResource("CircleShape2D_qvm78")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GranadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(94, 20)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(90, 29)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(91, 10)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GranadeTimer" to="." method="_on_granade_timer_timeout"]
